Creating the basic structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,4 @@
-<h1>Hello To File Uploader</h1>
+<div class="container">
+    <%- include("./includes/login.ejs") %>
+    <%- include("./includes/upload.ejs") %>
+</div>
