--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -6,10 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title  %></title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/webfont/icofont.min.css">
 </head>
 
 <body>
+    <%- include("../includes/navbar.ejs") %>
     <%- body %>
+
+    <% if (path == "/") { %>
+    <script src="/js/index.js"></script>
+    <% } %>
 </body>
 
 </html>
